--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pymongo = "*"
+pymongo = {extras = ["srv"], version = "*"}
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.10"
