--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-pymongo = {extras = ["srv"], version = "*"}
+pymongo = {extras = ["tls"], version = "*"}
 
 [dev-packages]
 autopep8 = "*"
